<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="wrap_content"
xmlns:tools="http://schemas.android.com/tools"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:colorBackground">


        <TextView
            android:id="@+id/dialog_newhab_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="13dp"
            android:layout_marginRight="13dp"
            android:gravity="center|start"
            android:text="@string/enter_name_of_your_new_habit"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/dialog_newhab_habname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_newhab_title"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="102dp"
            android:layout_marginRight="102dp"
            android:ems="10"
            android:hint="@string/going_sleep_24"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/dialog_newhab_title_dif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_newhab_habname"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="14dp"
            android:text="@string/difficulty"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/dialog_newhab_title_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_newhab_habname"
            android:layout_marginStart="103dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="14dp"
            android:layout_toEndOf="@+id/dialog_newhab_title_dif"
            android:layout_toRightOf="@+id/dialog_newhab_title_dif"
            android:text="@string/days_of_the_week"
            android:textColor="@android:color/black" />

        <RadioGroup
            android:id="@+id/dialog_newhab_radio_group"
            android:layout_width="178dp"
            android:layout_height="160dp"
            android:layout_below="@+id/dialog_newhab_title_dif"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="11dp"
            android:layout_marginLeft="11dp"
            android:layout_marginTop="20dp">

            <RadioButton
                android:id="@+id/dialog_newhab_radio_dif_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/easy" />

            <RadioButton
                android:id="@+id/dialog_newhab_radio_dif_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/medium" />

            <RadioButton
                android:id="@+id/dialog_newhab_radio_dif_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hard" />
        </RadioGroup>

        <Button
            android:id="@+id/dialog_newhab_btn_create"
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:layout_below="@+id/divider4"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_buttons"
            android:text="@string/create" />

        <Button
            android:id="@+id/dialog_newhab_btn_cancle"
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:layout_below="@+id/divider4"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/background_buttons"
            android:text="@string/cancle" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/dialog_newhab_box7"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="-2dp"
            android:layout_marginRight="-2dp"
            android:background="?android:attr/listDivider" />

        <CheckBox
            android:id="@+id/dialog_newhab_box1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_newhab_title_days"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="160dp"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="20dp"
            android:checked="true"
            android:text="@string/monday" />

        <CheckBox
            android:id="@+id/dialog_newhab_box2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_newhab_box1"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="160dp"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="0dp"
            android:checked="true"
            android:text="@string/tuesday" />

        <CheckBox
            android:id="@+id/dialog_newhab_box3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_newhab_box2"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="160dp"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="0dp"
            android:checked="true"
            android:text="@string/wednesday" />

        <CheckBox
            android:id="@+id/dialog_newhab_box4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_newhab_box3"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="160dp"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="0dp"
            android:checked="true"
            android:text="@string/thursday" />

        <CheckBox
            android:id="@+id/dialog_newhab_box5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_newhab_box4"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="160dp"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="0dp"
            android:checked="true"
            android:text="@string/friday" />

        <CheckBox
            android:id="@+id/dialog_newhab_box6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_newhab_box5"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="160dp"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="0dp"
            android:checked="true"
            android:text="@string/saturday" />

        <CheckBox
            android:id="@+id/dialog_newhab_box7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_newhab_box6"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="160dp"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="0dp"
            android:checked="true"
            android:text="@string/sunday" />

        <View
            android:id="@+id/divider7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/dialog_newhab_btn_create"
            android:layout_marginTop="27dp"
            android:background="?android:attr/listDivider" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>