<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:colorBackground"
        android:descendantFocusability="blocksDescendants">

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="78dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/recview_shop_name"
            android:layout_width="223dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_toStartOf="@+id/recview_shop_btn_buy"
            android:layout_toLeftOf="@+id/recview_shop_btn_buy"
            android:gravity="center|left"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            app:autoSizeTextType="uniform" />

        <Button
            android:id="@+id/recview_shop_btn_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="72dp"
            android:layout_marginRight="72dp"
            android:background="@drawable/background_buttons"
            android:text="@string/buy" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recview_shop_name"
            android:layout_alignStart="@+id/recview_shop_name"
            android:layout_marginTop="1dp"
            app:srcCompat="@drawable/ic_coin"
            android:layout_alignLeft="@+id/recview_shop_name" />

        <TextView
            android:id="@+id/recview_shop_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recview_shop_name"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@+id/imageView6"
            android:layout_toRightOf="@+id/imageView6"
            android:text="@string/_33"
            android:textColor="#7E8A10" />

        <Button
            android:id="@+id/recview_shop_btn_del"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="9dp"
            android:layout_marginRight="9dp"
            android:background="@drawable/background_buttons"
            android:text="@string/x" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>